[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.97"
log = "0.4.27"
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "http2", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.0.0"
url = "2.5.4"

[workspace.package]
edition = "2021"
